Updated log levels for Spring

--- a/SportsWeb/src/main/resources/messages.properties
+++ b/SportsWeb/src/main/resources/messages.properties
@@ -1,4 +1,4 @@
-arun.sports.store=\u30B5\u30F3\u30D7\u30EB
+arun.sports.store=Arun's Sports Store
 selectShoe=Select Shoe
 addShoe=Add Shoe
 editShoe=Edit Shoe
